attachments, locations and spots working
